--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,20 @@ body.menu-open .main-screen {
   pointer-events: auto;
   opacity: 1;
 }
+.selection{
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-auto-rows: 300px;
+  gap: 50px;
+}
+.main-gallery .selection img{
+  cursor: pointer;
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+  border-radius: 1rem;
+  box-shadow: 0px 6px 4px 0px rgba(0, 0, 0, 0.4);
+}
 
 /* LAYOUT */
 .main-layout {
