--- a/css/main.css
+++ b/css/main.css
@@ -87,20 +87,6 @@ body.menu-open .main-screen {
   pointer-events: auto;
   opacity: 1;
 }
-.selection{
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  grid-auto-rows: 300px;
-  gap: 50px;
-}
-.main-gallery .selection img{
-  cursor: pointer;
-  object-fit: cover;
-  height: 100%;
-  width: 100%;
-  border-radius: 1rem;
-  box-shadow: 0px 6px 4px 0px rgba(0, 0, 0, 0.4);
-}
 
 /* LAYOUT */
 .main-layout {
@@ -132,9 +118,34 @@ body.menu-open .main-screen {
   text-decoration: none;
 }
 
+/* MAIN GALLERY*/
+.main-gallery,
+.main-memes,
+.main-unavailable {
+  background-color: #373b41;
+  border-radius: 1rem;
+  padding: 30px;
+  color: #ffffff;
+}
+.selection{
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(190px, 1fr));
+  grid-auto-rows: 200px;
+  gap: 50px;
+}
+.main-gallery .selection img{
+  cursor: pointer;
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+  border-radius: 1rem;
+  box-shadow: 0px 6px 4px 0px rgba(0, 0, 0, 0.4);
+}
+
 /* DESKTOP */ 
 @media (min-width: 980px) {
   .main-layout {
     max-width: 980px;
   }
 }
+
