--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,8 @@ html {
 body {
   margin: 0;
   background-color: #21252b;
+  display: flex;
+  flex-direction: column;
 }
 
 h1,
@@ -28,11 +30,20 @@ h6 {
   font-weight: inherit;
 }
 
+article {
+  display: flex;
+  flex-direction: column;
+  min-height: 10vh;
+
+}
 /* UTILITIES */
 .dn {
   display: none;
 }
 
+.f1 {
+  flex:1;
+}
 .df {
   display: flex;
 }
@@ -172,7 +183,7 @@ body.menu-open .main-nav ul {
 .main-gallery .top-bar {
   margin-bottom: 20px;
   flex-wrap: wrap;
-  gap: 12px;
+  gap: 50px;
 }
 
 .main-gallery .top-bar .search-holder {
@@ -232,8 +243,8 @@ body.menu-open .main-nav ul {
 .main-gallery .selection,
 .main-memes .saved-memes {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  grid-auto-rows: 250px;
+  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+  grid-auto-rows: 280px;
   gap: 25px;
 }
 
@@ -323,7 +334,7 @@ body.menu-open .main-nav ul {
 }
 
 .main-editor .controls {
-  width: 405px;
+  width: 750px;
   height: 510px;
   background-color: #373b41;
   border-radius: 1.5rem;
@@ -358,7 +369,7 @@ body.menu-open .main-nav ul {
 }
 
 .main-editor .controls .text-scd input {
-  margin: 0 5px;
+  margin: 0 40px;
 }
 
 .main-editor .controls .rich-text {
@@ -445,20 +456,13 @@ body.menu-open .main-nav ul {
 }
 
 /* FOOTER */
+
 .main-footer-container {
   margin: 15px 0;
   color: #cccccc;
   background-color: #1d1e2094;
-  text-align: center;
-  padding: 25px;
-  
 }
 
-.main-footer-container.active {
-  padding: 10px;
-  border-radius: 1.5rem;
-  background-color: #373b41;
-}
 
 @media (min-width: 768px) {
   .main-gallery .top-bar .demo-data {
@@ -532,6 +536,6 @@ body.menu-open .main-nav ul {
 
 @media (min-width: 980px) {
   .main-layout {
-    max-width: 980px;
+    max-width: 1300px;
   }
 }
