--- a/css/main.css
+++ b/css/main.css
@@ -29,13 +29,6 @@ h6 {
   font-size: inherit;
   font-weight: inherit;
 }
-
-article {
-  display: flex;
-  flex-direction: column;
-  min-height: 10vh;
-
-}
 /* UTILITIES */
 .dn {
   display: none;
@@ -76,27 +69,6 @@ article {
   list-style: none;
   margin: 0;
   padding: 0;
-}
-
-/* MAIN SCREEN */
-
-.main-screen {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.6);
-  cursor: pointer;
-  opacity: 0;
-  pointer-events: none;
-
-  transition: opacity 0.6s;
-}
-
-body.menu-open .main-screen {
-  pointer-events: auto;
-  opacity: 1;
 }
 
 /* LAYOUT */
@@ -156,6 +128,7 @@ body.menu-open .main-nav ul {
   text-decoration: none;
   background-color: #eee;
   color: inherit;
+  
 }
 
 .main-header .ham-button {
@@ -174,6 +147,7 @@ body.menu-open .main-nav ul {
   border-radius: 1rem;
   padding: 20px;
   color: #ffffff;
+  flex: 1;
 }
 
 .main-unavailable {
@@ -322,7 +296,7 @@ body.menu-open .main-nav ul {
 
 .main-about .about-info a:hover {
   opacity: 0.5;
-  transition: 0.2s;
+  transition: 0.5s;
 }
 
 /* MAIN EDITOR */
@@ -458,9 +432,11 @@ body.menu-open .main-nav ul {
 /* FOOTER */
 
 .main-footer-container {
-  margin: 15px 0;
-  color: #cccccc;
-  background-color: #1d1e2094;
+  color: white;
+  width: 100%;
+  background: #111;
+  margin-top: 1.5rem;
+  flex-shrink: 0;
 }
 
 
@@ -508,7 +484,7 @@ body.menu-open .main-nav ul {
     color: #21ac91;
     background-color: #ffffff;
     border-radius: 1rem;
-    transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
+    transition: color 0.3s ease-in-out, background-color 0.5s ease-in-out;
   }
 }
 
